--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <meta name="date" content="2024-10-25" />
 
-<title>The Impact of the Queen’s Gambit: Trends in Chess Opening Popularity</title>
+<title>The Impact of "The Queen’s Gambit": Trends in Chess Opening Popularity</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
